# HuffPressor

./: .gitignore  CMakeLists.txt  test.txt
data/: test.txt
include/: bitReader.h  bitWriter.h  compressor.h  config.h  decompressor.h  huffmanTree.h  utils.h
src/: bitReader.cpp  bitWriter.cpp  compressor.cpp  compressor.h  decompressor.cpp  huffmanTree.cpp  main.cpp  utils.cpp
